frontend/tests/cases/positive/interface-simple-17.gr
data A a b = B

interface Simple a where
  simple : a -> a

-- multi-param datatype should be well-kinded
instance Simple (A a b) where
  simple x = x
