frontend/tests/cases/negative/interfaces/kind-mismatch/kindMismatchInInstanceHeadDT2Params.gr
interface Simple (a : Type -> Type)

data A a b = A'

-- (A a b) has wrong kind
instance Simple (A a b)
